--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -20,8 +20,8 @@ on:
 env:
  imageRepository: 'content-web'
  resourceGroupName: 'Fabmedical-260441'
- containerRegistryName: 'fabmedical260441'
- containerRegistry: 'fabmedical260441.azurecr.io'
+ containerRegistryName: 'acr260441'
+ containerRegistry: 'acr260441.azurecr.io'
  dockerfilePath: './content-web'
  tag: '${{ github.run_id  }}'
 
@@ -33,25 +33,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # Checkout the repo
-   - uses: actions/checkout@master
+    - uses: actions/checkout@master
 
-   - name: Set up Docker Buildx
-     uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-   - name: Login to ACR
-     uses: docker/login-action@v1
-     with:
-       registry: ${{ env.containerRegistry }}
-       username: ${{ secrets.ACR_USERNAME }}
-       password: ${{ secrets.ACR_PASSWORD }}
+    - name: Login to ACR
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ env.containerRegistry }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
 
-   - name: Build and push an image to container registry
-     uses: docker/build-push-action@v2
-     with:
-       context: ${{ env.dockerfilePath  }}
-       file: "${{ env.dockerfilePath }}/Dockerfile"
-       pull: true
-       push: true
-       tags: |
-         ${{ env.containerRegistry }}/${{ env.imageRepository }}:${{ env.tag }}
-         ${{ env.containerRegistry }}/${{ env.imageRepository }}:latest
+    - name: Build and push an image to container registry
+      uses: docker/build-push-action@v2
+      with:
+        context: ${{ env.dockerfilePath  }}
+        file: "${{ env.dockerfilePath }}/Dockerfile"
+        pull: true
+        push: true
+        tags: |
+          ${{ env.containerRegistry }}/${{ env.imageRepository }}:${{ env.tag }}
+          ${{ env.containerRegistry }}/${{ env.imageRepository }}:latest
